--- a/benchmarks/HybridCache.Serializers.Benchmarks/HybridCache.Serializers.Benchmarks.csproj
+++ b/benchmarks/HybridCache.Serializers.Benchmarks/HybridCache.Serializers.Benchmarks.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\HybridCache.Serializers.Json\HybridCache.Serializers.Json.csproj" />
       <ProjectReference Include="..\..\src\HybridCache.Serializers.MemoryPack\HybridCache.Serializers.MemoryPack.csproj" />
       <ProjectReference Include="..\..\src\HybridCache.Serializers.MessagePack\HybridCache.Serializers.MessagePack.csproj" />
       <ProjectReference Include="..\..\src\HybridCache.Serializers.ProtobufNet\HybridCache.Serializers.ProtobufNet.csproj" />
